--- a/source/sass/components/_btn.scss
+++ b/source/sass/components/_btn.scss
@@ -1,16 +1,18 @@
 .btn{
   font-family: $normal-font;
   color: $green;
-  border: 3px solid;
-  padding: 20px 40px;
-  font-size: 18px;
+  margin-top: 20%;
+  border: 6px solid;
+  padding: 80px 160px;
+  font-weight: bold;
+  font-size: 52px;
   background-color: transparent;
   outline: none;
   box-shadow: none;
   &:hover{
     background-color: $green;
     color: #fff;
-    border: 3px solid $green;
+    border: 6px solid $green;
   }
   &.hide{
     display: none;
